feat(navigator): ✨ enhance navigator configuration and improve warp handling logic